<resources>
    <string name="app_name">Just Do It</string>
    <string name="placeHolderText">item</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Auto Sync</string>
    <string name="theme">Theme</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="display">Display</string>
    <string name="copyright">© 2022 BJIT Limited</string>
    <string name="hr6">6 hours</string>
    <string name="hr12">12 hours</string>
    <string name="syncInterval_Key">sync_time</string>
    <string name="syncInterval_title">Sync interval</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have_nothing_todo">You have nothing todo</string>
    <string name="todo_title">Todo Title</string>
    <string name="sub_todo">Add Sub-Todos</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="timer">Timer</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="noTimeSet">Time not set</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="exit_app">Exit App</string>
    <string name="todo_added">Todo Added</string>
    <string name="time">Time</string>
    <string name="title_in_textform">Title</string>
    <string name="comma_title">, Title</string>
    <string name="subtask_in_textform">Subtask</string>
    <string name="comma_subtask">, Subtask</string>
    <string name="please_add_intextform">Please add -‏‏‎ ‎</string>
    <string name="todo_updated">Todo Updated</string>
    <string name="no_new_changes">No new changes</string>
    <string name="no_data_in_textfield">Please add data to empty textfields</string>
    <string name="theme_switch_key">theme</string>
    <string name="sync_with_online">Sync now</string>
    <string name="sync_now">Sync from online database?</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="connect_to_internet">Please connect to the internet</string>
    <string name="default_sync_interval">12</string>
    <string name="todo_delete_title">Delete Todo</string>
    <string name="todo_delete_message">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_future_time">Please enter a future time</string>
</resources>